# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Z-bit Systems, LLC

# osdp-mcp — Model Context Protocol server that drives an osdp-embedded
# PD against an ACU under test. Lets an AI agent (or any MCP client)
# spin up a virtual PD on a real serial port or an in-process loopback,
# script its replies, inject events, and observe what the ACU sends.
#
# Listed as a member of the rust/Cargo.toml workspace; sits under
# tools/ to mirror the existing host-tool layout (osdp-pd-mock,
# osdp-acu-mock, osdp-parser).

[package]
name        = "osdp-mcp"
description = "MCP server exposing the osdp-embedded PD state machine for testing OSDP ACUs."
# The workspace root lives in ../../rust/, not in any ancestor of this
# Cargo.toml. Without this hint cargo can't find the [workspace.package]
# block to inherit `version` / `edition` / etc. from.
workspace   = "../../rust"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true
publish     = false

# ---- Features --------------------------------------------------------
#
# Crypto backend selection. The library never vendors AES; the binary
# picks one or more backends at compile time and the runtime --crypto
# flag chooses between them. Default is RustCrypto's `aes` — pure
# Rust, constant-time, no external setup. tiny-AES-c (compiled from
# vendor/tiny-aes/ at build time) is gated separately so binaries
# that don't want the FFI overhead stay lean. Both backends source
# their RNG bytes from `getrandom`.
[features]
default           = ["crypto-rustcrypto"]
crypto-rustcrypto = ["dep:aes", "dep:getrandom"]
crypto-tiny-aes   = ["dep:getrandom"]

[dependencies]
osdp-embedded = { path = "../../rust/osdp", default-features = false, features = ["std", "pd"] }

# Optional crypto backend deps — compiled in only when the matching
# feature is active.
aes       = { version = "0.8", optional = true }
getrandom = { version = "0.2", optional = true }

# rmcp is the official Rust MCP SDK. Default features (base64, macros,
# server) plus transport-io for stdio and transport-streamable-http-
# server for the remote (HTTP) listener. Past 1.0, so API churn is
# bounded — bump the patch as needed.
rmcp = { version = "1.7", features = ["transport-io", "transport-streamable-http-server"] }

# Streamable-HTTP transport plumbing. `axum` provides the HTTP server
# we mount rmcp's `StreamableHttpService` onto (it's a tower::Service,
# not self-hosting). `tokio-util` is for the CancellationToken used to
# stop in-flight SSE streams cleanly on Ctrl-C.
axum       = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }

# rmcp's macros expand to async fns and Tokio I/O; we need a multi-
# thread runtime for the stdio server loop. The PD itself is !Send
# and runs on a dedicated std::thread (set up in later milestones).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }

# Type-safe tool parameter schemas. rmcp 1.7 internally uses
# schemars 1.x; matching that version here is required for the
# Json<T> structured-output wrapper to accept our types (otherwise
# we'd be implementing JsonSchema from the wrong crate version).
schemars = "1"
serde    = { version = "1", features = ["derive"] }

# Pulled in by rmcp; declare explicitly so we can use ? in main().
anyhow = "1"

# Cross-platform serial port access for the PD-side wire.
# Same shape osdp-pd-mock would use if it were Rust.
#
# default-features = false drops the Linux `libudev` backend, which only
# powers port *enumeration* (available_ports()). osdp-mcp always opens a
# port by path (serialport::new(name, baud).open()), so libudev is dead
# weight: removing it drops a native C dependency, shrinks the binary,
# lets the tool cross-compile to aarch64-unknown-linux-gnu (Raspberry Pi)
# without an arm64 libudev, and frees the target from the libudev.so.1
# runtime requirement.
serialport = { version = "4", default-features = false }

# Stderr logging — never write to stdout when MCP is on stdio.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# Only invoked when `crypto-tiny-aes` is active, in which case we
# compile vendor/tiny-aes/aes.c and link AES_ECB_encrypt /
# AES_ECB_decrypt for the FFI in src/crypto/tiny_aes.rs.
cc = "1.0"

[dev-dependencies]
# Integration tests spawn the built binary and drive it over stdio
# using rmcp's own client. `client` enables the client side of the
# service; `transport-child-process` provides TokioChildProcess.
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
# rmcp::object! macro expands to serde_json::json!(...) so the caller
# needs serde_json in scope.
serde_json = "1"
# The actor-loopback test pairs our PD with an in-process Acu to
# verify the default handler responds to POLL / ID / CAP correctly.
# Adding `acu` here unifies with the [dependencies] feature set only
# during `cargo test`; release builds stay PD-only.
osdp-embedded = { path = "../../rust/osdp", default-features = false, features = ["std", "pd", "acu"] }
